--- a/events.html
+++ b/events.html
@@ -39,7 +39,7 @@
 </p>
 
        </div> <!--ID CONTENT-->
- <span class="credit"><a href="http://carolinenolasco.com" title="Theme by Caroline Nolasco">Theme by Caroline Nolasco</a></span>
+ <span class="credit"><a href="https://www.carolinenolasco.com" title="Theme by Caroline Nolasco">Theme by Caroline Nolasco</a></span>
 
 <!-- EDITABLE CONTENT ENDS HERE-->
 </div> <!-- ID CONTAINER-->
