--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ In 2012 I moved to New Jersey after I was accepted into The Kubert School of Car
 
 </p>   
        </div> <!--ID CONTENT-->
- <span class="credit"><a href="http://carolinenolasco.com" title="Theme by Caroline Nolasco">Theme by Caroline Nolasco</a></span>
+ <span class="credit"><a href="https://www.carolinenolasco.com" title="Theme by Caroline Nolasco">Theme by Caroline Nolasco</a></span>
 
 <!-- EDITABLE CONTENT ENDS HERE-->
 </div> <!-- ID CONTAINER-->
