--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 <span class="portfolio"> <a href="sketches.html" title="Sketches">Sketches</a> </span>
 
        </div> <!--ID CONTENT-->
- <span class="credit"><a href="http://carolinenolasco.com" title="Theme by Caroline Nolasco">Theme by Caroline Nolasco</a></span>
+ <span class="credit"><a href="https://www.carolinenolasco.com" title="Theme by Caroline Nolasco">Theme by Caroline Nolasco</a></span>
 
 <!-- EDITABLE CONTENT ENDS HERE-->
 </div> <!-- ID CONTAINER-->
